wxc/include/ewxw/wxc_glue.h

void       wxMutexGui_Enter(  );
void       wxMutexGui_Leave(  );
/* wxCondition */
TClassDef(wxCondition)
void       wxCondition_Broadcast( TSelf(wxCondition) _obj );
TClass(wxCondition) wxCondition_Create( void* _mut );
void       wxCondition_Delete( TSelf(wxCondition) _obj );
void       wxCondition_Signal( TSelf(wxCondition) _obj );
void       wxCondition_Wait( TSelf(wxCondition) _obj );
int        wxCondition_WaitFor( TSelf(wxCondition) _obj, int sec, int nsec );
void       wxCriticalSection_Delete( TSelf(wxCriticalSection) _obj );
void       wxCriticalSection_Enter( TSelf(wxCriticalSection) _obj );
void       wxCriticalSection_Leave( TSelf(wxCriticalSection) _obj );
/* wxMutex */
TClassDef(wxMutex)
TClass(wxMutex) wxMutex_Create(  );
void       wxMutex_Delete( TSelf(wxMutex) _obj );
TBool      wxMutex_IsLocked( TSelf(wxMutex) _obj );
int        wxMutex_Lock( TSelf(wxMutex) _obj );
int        wxMutex_TryLock( TSelf(wxMutex) _obj );
int        wxMutex_Unlock( TSelf(wxMutex) _obj );